	fix build on systems with utmpx.h API (FreeBSD 9)
	fspscan: do not shadow host variable
	fspscan: fix clang warning about empty for cycle body by placing
	  semicolon on separate line
	FAQ: Cleaned lot of SGML markup errors
	Do not use sgmlformat, call jade directly
	correctly zero entire sockaddr_in structure during name resolving,
	  error found by clang.

Version 2.8.1b26 - 1 Oct 2009
	fver now reports if server can process extra data in input packets.
	  fspclient did that for a long time. This field is used by fspd
	  2.8.1 beta 21 or newer.
	Server version string sent as response to CC_VERSION command have
	  no longer \n appended to it. Old FSP used it but fver client
	  command can handle server strings without \n for quite a long
	  time, so i decided to remove it. It is bad idea to terminate
	  version strings by \n while it is not required by FSP protocol.
	glob() function used in FSP clients renamed to bsdglob because it
	  clashed with glob() function in newer Linux glibc resulting in
          segfaults.
	non continuous upload detection fixed. Now detection works as follows:
	  if you are trying to upload past end of file, fspd will report that
	  you are trying to create hole in file.
	  if you are seeking backwards more than 1 packet size fspd will
	  report noncontinuous upload. Most likely port from old unfinished
	  download was reused.
	We can now reupload last block which can happen if fspd server is
	  restarted and reply to upload command is lost on way from server
	  to client.
	Check for overwriting uploaded files in fspd was reversed by mistake.
	  Now if you want to overwrite file you must have permission for
	  deleting and adding files or be directory owner.
	Turning on debug in SCons turns on maintainer mode also.
	Upload starting at zero position are now always allowed no matter if
	  source port was reused or not. Old code did that but not over
	  server restarts.
	INFO file updated with fresh information