@@ -12,6 +12,7 @@ Version NEXT
 	Do not use sgmlformat, call jade directly
 	correctly zero entire sockaddr_in structure during name resolving,
 	  error found by clang.
+	allow docbook dsssl stylesheets to be specified at scons command line  
 
 Version 2.8.1b26 - 1 Oct 2009
 	fver now reports if server can process extra data in input packets.
